--- a/forms.html
+++ b/forms.html
@@ -14,6 +14,7 @@
             <input type="number" id="age" name="age"><br>
             <button>Submit</button>
         </form>
+        <ul id="listOfItems"></ul>
         <script>
             function saveToLocalStorage(event){
                 event.preventDefault()
@@ -27,6 +28,13 @@
                 }
                 myObj_serialized=JSON.stringify(myObj);
                 localStorage.setItem('myObj', myObj_serialized);
+                showUsersOnScreen(myObj);
+            }
+            function showUsersOnScreen(myObj){
+                var parEle=document.getElementById('listOfItems');
+                var childEle=document.createElement('li');
+                childEle.textContent=myObj.name+ '-' +myObj.email+ '-' +myObj.age;
+                parEle.appendChild(childEle);
             }
         </script>
     </body>
