--- a/forms.html
+++ b/forms.html
@@ -43,6 +43,10 @@
                     parEle.replaceChild(childEle);
                 }
                 childEle.appendChild(delBtn);
+                var editBtn=document.createElement('input');
+                editBtn.type='button';
+                editBtn.value='Edit';
+                childEle.appendChild(editBtn);
             }
         </script>
     </body>
